@@ -1,13 +1,12 @@
 package ru.job4j.collection;
 
 import java.util.Collections;
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
 public class JobSorter {
     public static void main(String[] args) {
-        List<Job> jobs = Arrays.asList(
+        List<Job> jobs = List.of(
                 new Job("Fix bugs", 4),
                 new Job("Fix bugs", 1),
                 new Job("Fix bugs", 2),
